# telegram-authenticator

./: .env.tmp  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  request.py  requirements.txt
alembic/: env.py
alembic/versions/: 0fa96fc18aca_alter_field_code_to_string.py  5b8dde2a3e65_make_models.py  a60dcd3e2dc0_initial_migrations.py  b002a6397fe1_make_chat_id_uniqe.py  cef706d66f34_alter_chat_id_to_biginteger.py  e062350981b3_add_is_registered_column.py  e34b86181468_add_fields_phone_and_code.py
api/v1/: courier_payout_notify.py  messages.py  order_notification.py  send_code.py  send_notifications.py  send_order.py  send_support_case.py
bot/: choose_time.py  commands.py  models.py  order_callback.py  schemas.py  webhook.py
bot/handlers/: order_paid.py  reject_order.py  reviews.py
bot/handlers/courier/: get_paid_keyboard.py  pay_callback.py
config/: __init__.py  db_helper.py  redis_client.py  settings.py
core/: hide_logs.py  order_context.py
crud/: user_crud.py
schemas/: courier_payout.py  fianance_failed_schema.py  new_order.py  notifications.py
utils/: courier_payout_text.py  create_text.py  decode.py  encode.py  finance_failed.py  post_request.py  send_update.py
utils/review/: build_captions.py  build_review_keyboard.py
